package inf112.skeleton.app;


public interface IButton {

    boolean buttonClicked(int screenX, int screenY, Button button);
}
